--- a/services/api-gateway/package.json
+++ b/services/api-gateway/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -16,11 +20,37 @@
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "winston": "^3.10.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
+    "ioredis": "^5.3.2",
+    "express-rate-limit": "^6.10.0",
+    "rate-limit-redis": "^3.0.1",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
-  }
+    "supertest": "^6.3.3",
+    "eslint": "^8.48.0",
+    "@types/jest": "^29.5.5",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "keywords": [
+    "bitcoin",
+    "mpesa",
+    "payment",
+    "api",
+    "gateway"
+  ],
+  "author": "Rada Team",
+  "license": "MIT"
 }
